Fixed navbar shift on modal open

--- a/sass/_partials/_btn.scss
+++ b/sass/_partials/_btn.scss
@@ -15,7 +15,7 @@
     background: linear-gradient(180deg, orange, darkorange); /* Standard syntax */
     text-shadow: 1px 1px 1px brown;
     transition: all .2s ease-in;
-    color: yellow;
+    color: white;
     
     &.shadow {
       -webkit-box-shadow: 0px 8px 6px -6px rgba(0,0,0,0.7);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
